--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
                         </div>
                     </div>
                     <div id="image-render"></div>
+                    <div class="pagination">
+
+                        <a href="#">1</a>
+                        <a href="#">2</a>
+                        <a href="#">3</a>
+                        <a href="#">4</a>
+                        <a href="#">5</a>
+                        <a href="#">6</a>
+
+                    </div>
                 </div>
                 <!-- /.profile-photo -->
             </div>
