--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
         </div>
         <!-- /.container -->
     </section>
-    <script language="javascript" src="slideimage.js"></script>
-    <script language="javascript" src="automatic.js"></script>
+    <script language="javascript" src="./js/slideimage.js"></script>
+    <script language="javascript" src="./js/automatic.js"></script>
 </body>
 
 </html>
